--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -191,7 +191,7 @@ frontend ft_stats
 
 # Stats users - credentials loaded from environment via entrypoint script
 userlist stats_users
-    user "${HAPROXY_STATS_USER}" insecure-password "${HAPROXY_STATS_PASSWORD}"
+    user imzami password $5$saltsalt$H..3oBcIbZUCyOQJTtZ9B57TdN8Y/GXRRtBLGcG74R3
 
 #-------------------------------------------------------------------------------
 # BACKEND: DoT Upstream Servers
