--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -251,8 +251,8 @@ services:
       - ALL
 
     environment:
-      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
-      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:?GRAFANA_ADMIN_PASSWORD must be set}
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=11221099
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_SERVER_HTTP_PORT=3000
       - GF_LOG_MODE=console
@@ -273,7 +273,7 @@ services:
       - monitoring_net
 
     ports:
-      - "127.0.0.1:3000:3000"
+      - "3000:3000"
 
     logging:
       driver: json-file
