--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,48 +118,47 @@ services:
       start_period: 10s
 
   valkey:
-    image: valkey/valkey:9.0.1-alpine
-    container_name: valkey
-    restart: unless-stopped
+  image: valkey/valkey:9.0.1-alpine
+  container_name: valkey
+  restart: unless-stopped
 
+  security_opt:
+    - no-new-privileges:true
+  cap_drop:
+    - ALL
 
-    security_opt:
-      - no-new-privileges:true
-    cap_drop:
-      - ALL
+  read_only: true
+  tmpfs:
+    - /tmp:size=10M,mode=1777
 
-    read_only: true
-    tmpfs:
-      - /tmp:size=10M,mode=1777
+  command: >
+    valkey-server
+    --appendonly yes
+    --maxmemory 512mb
+    --maxmemory-policy allkeys-lru
 
-    command: >
-      valkey-server
-      --appendonly yes
-      --maxmemory 512mb
-      --maxmemory-policy allkeys-lru
-      --requirepass ${VALKEY_PASSWORD}
+  volumes:
+    - valkey_data:/data
 
-    volumes:
-      - valkey_data:/data
+  networks:
+    - internal_net
 
-    networks:
-      - internal_net
+  ports:
+    - "127.0.0.1:6379:6379"
 
-    ports:
-      - "127.0.0.1:6379:6379"
+  logging:
+    driver: json-file
+    options:
+      max-size: "25m"
+      max-file: "5"
 
-    logging:
-      driver: json-file
-      options:
-        max-size: "25m"
-        max-file: "5"
+  healthcheck:
+    test: ["CMD-SHELL", "valkey-cli ping | grep -q PONG"]
+    interval: 30s
+    timeout: 5s
+    retries: 3
+    start_period: 10s
 
-    healthcheck:
-      test: ["CMD-SHELL", "VALKEYCLI_AUTH=$$VALKEY_PASSWORD valkey-cli ping | grep -q PONG"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
 
   # =============================================================================
   # MONITORING STACK
