Add SETUID and SETGID capabilities in docker-compose
Added SETUID and SETGID capabilities to the service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,6 +126,9 @@ services:
     - no-new-privileges:true
   cap_drop:
     - ALL
+  cap_add:
+    - SETUID
+    - SETGID
 
   read_only: true
   tmpfs:
@@ -158,7 +161,6 @@ services:
     timeout: 5s
     retries: 3
     start_period: 10s
-
 
   # =============================================================================
   # MONITORING STACK
