--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,7 +123,8 @@ services:
   restart: unless-stopped
 
   security_opt:
-    - no-new-privileges:true
+    no-new-privileges: "true"
+
   cap_drop:
     - ALL
   cap_add:
