Fix Dockerfile user permissions, Valkey healthcheck, and HAProxy stats auth
- Dockerfile: Add USER root before installing packages, switch back to haproxy user after
- Dockerfile: Add netcat-openbsd for healthcheck, add apk update
- docker-compose: Fix Valkey healthcheck to handle password conditionally
- docker-compose: Add user 999:999 for Valkey container
- docker-compose: Create appendonlydir before starting Valkey
- docker-compose: Add HAPROXY_STATS_USER/PASSWORD environment variables
- haproxy.cfg: Use $ENV() syntax for environment variable expansion
- .env.example: Remove unused VALKEY_HOST variable

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -173,7 +173,7 @@ frontend ft_stats
     bind *:8404
     mode http
     
-    # Basic auth for stats (change password in production)
+    # Basic auth for stats using environment variables
     acl auth_ok http_auth(stats_users)
     http-request auth realm HAProxy-Stats unless auth_ok || { path /health } || { path /metrics }
     
@@ -189,11 +189,10 @@ frontend ft_stats
     # Health check endpoint (no auth required)
     monitor-uri /health
 
-# Stats users - credentials loaded from environment via entrypoint script
-# Note: For production, generate password hash using: mkpasswd -m sha-256
-# Example: echo "password" | mkpasswd -m sha-256 -s
+# Stats users - credentials from environment variables
+# Set HAPROXY_STATS_USER and HAPROXY_STATS_PASSWORD in docker-compose.yml
 userlist stats_users
-    user "${HAPROXY_STATS_USER}" insecure-password "${HAPROXY_STATS_PASSWORD}"
+    user "$ENV(HAPROXY_STATS_USER)" insecure-password "$ENV(HAPROXY_STATS_PASSWORD)"
 
 #-------------------------------------------------------------------------------
 # BACKEND: DoT Upstream Servers
