--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     environment:
       - VALKEY_HOST=valkey
       - VALKEY_PASSWORD=${VALKEY_PASSWORD:-}
+      - HAPROXY_STATS_USER=${HAPROXY_STATS_USER:-admin}
+      - HAPROXY_STATS_PASSWORD=${HAPROXY_STATS_PASSWORD:-changeme}
 
     volumes:
       - type: bind
@@ -124,6 +126,7 @@ services:
     image: valkey/valkey:9.0.1-alpine
     container_name: valkey
     restart: unless-stopped
+    user: "999:999"
 
     security_opt:
       - no-new-privileges:true
@@ -142,7 +145,7 @@ services:
       - VALKEY_PASSWORD=${VALKEY_PASSWORD:-}
 
     command: >
-      sh -c 'valkey-server
+      sh -c 'mkdir -p /data/appendonlydir && valkey-server
       --appendonly yes
       --maxmemory 512mb
       --maxmemory-policy allkeys-lru
@@ -165,7 +168,7 @@ services:
         max-file: "5"
 
     healthcheck:
-      test: ["CMD-SHELL", "valkey-cli ${VALKEY_PASSWORD:+-a $VALKEY_PASSWORD} ping 2>/dev/null | grep -q PONG"]
+      test: ["CMD-SHELL", "if [ -n \"$VALKEY_PASSWORD\" ]; then valkey-cli -a \"$VALKEY_PASSWORD\" ping 2>/dev/null | grep -q PONG; else valkey-cli ping 2>/dev/null | grep -q PONG; fi"]
       interval: 30s
       timeout: 5s
       retries: 3
